--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Convert Hi-C interaction matices into the Binary Upper TranguLar MatRix (BUTLR) format. The file could then be used to view Hi-C heatmap and virtual 4C plot with the 3D Genome Browser (http://3dgenome.org).
+Please go to http://3dgenome.org/butlr.html for detailed descriptions of file format precursors and usage of these scripts.
